@@ -35,6 +35,7 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.function.Supplier;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -323,7 +324,7 @@ public class TableQueryEngineBootstrapped {
 	}
 
 	protected String toPerfLog(CubeQueryStep cubeQueryStep) {
-		Set<TableQueryV2> tableQueriesV2 = TableQueryV2.fromV1(TableQuery.fromSteps(Set.of(cubeQueryStep)));
+		Set<TableQueryV2> tableQueriesV2 = TableQueryV2.fromV1(TableQuery.fromSteps(ImmutableSet.of(cubeQueryStep)));
 		return toPerfLog(Iterables.getOnlyElement(tableQueriesV2));
 	}
 
@@ -715,7 +716,8 @@ public class TableQueryEngineBootstrapped {
 	 * @return
 	 */
 	protected Map<String, ?> valuesForSuppressedColumns(Set<String> suppressedColumns, CubeQueryStep queryStep) {
-		return suppressedColumns.stream().collect(Collectors.toMap(c -> c, c -> IColumnGenerator.COORDINATE_GENERATED));
+		return suppressedColumns.stream()
+				.collect(Collectors.toMap(Function.identity(), c -> IColumnGenerator.COORDINATE_GENERATED));
 	}
 
 	/**
@@ -801,7 +803,8 @@ public class TableQueryEngineBootstrapped {
 
 		// Given all tableDag nodes, we should have all cubeDag roots
 		{
-			Set<CubeQueryStep> neededCubeRoots = streamMissingRoots(queryStepsDag).collect(Collectors.toSet());
+			Set<CubeQueryStep> neededCubeRoots =
+					streamMissingRoots(queryStepsDag).collect(ImmutableSet.toImmutableSet());
 
 			Set<CubeQueryStep> missingCubeRoots = Sets.difference(neededCubeRoots, stepsImpliedByTableQueries);
 			if (!missingCubeRoots.isEmpty()) {
@@ -819,26 +822,26 @@ public class TableQueryEngineBootstrapped {
 				log.warn("Analyzing one missing: {}", firstMissing);
 				Set<CubeQueryStep> impliedSameMeasure = stepsImpliedByTableQueries.stream()
 						.filter(s -> s.getMeasure().getName().equals(firstMissing.getMeasure().getName()))
-						.collect(Collectors.toSet());
+						.collect(ImmutableSet.toImmutableSet());
 				log.warn("Missing has {} sameMeasure siblings", impliedSameMeasure.size());
 
 				Set<CubeQueryStep> impliedSameMeasureSameGroupBy = impliedSameMeasure.stream()
 						.filter(s -> s.getGroupBy()
 								.getGroupedByColumns()
 								.equals(firstMissing.getGroupBy().getGroupedByColumns()))
-						.collect(Collectors.toSet());
+						.collect(ImmutableSet.toImmutableSet());
 				log.warn("Missing has {} sameMeasureAndGroupBy siblings", impliedSameMeasureSameGroupBy.size());
 
 				Set<CubeQueryStep> impliedSameMeasureSameGroupBySameFilter = impliedSameMeasureSameGroupBy.stream()
 						.filter(s -> s.getFilter().equals(firstMissing.getFilter()))
-						.collect(Collectors.toSet());
+						.collect(ImmutableSet.toImmutableSet());
 				log.warn("Missing has {} sameMeasureSameGroupBySameFilter siblings",
 						impliedSameMeasureSameGroupBySameFilter.size());
 
 				Set<CubeQueryStep> impliedSameMeasureSameGroupByEquivalentFilter = impliedSameMeasureSameGroupBy
 						.stream()
 						.filter(s -> FilterEquivalencyHelpers.areEquivalent(s.getFilter(), firstMissing.getFilter()))
-						.collect(Collectors.toSet());
+						.collect(ImmutableSet.toImmutableSet());
 				log.warn("Missing has {} sameMeasureSameGroupByEquivalentFilter siblings",
 						impliedSameMeasureSameGroupByEquivalentFilter.size());
 
