@@ -23,15 +23,16 @@
 package eu.solven.adhoc.measure.transformator.iterator;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
 import java.util.Set;
 import java.util.Spliterator;
 import java.util.Spliterators;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
+
+import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Iterables;
 
 import eu.solven.adhoc.data.column.ISliceToValue;
 import eu.solven.adhoc.data.column.SliceToValue;
@@ -70,7 +71,7 @@ public class UnderlyingQueryStepHelpersNavigable {
 			return underlying.stream().map(slice -> {
 				Object value = IValueProvider.getValue(slice.getValueProvider());
 
-				return SliceAndMeasures.from(slice.getSlice(), queryStep, Collections.singletonList(value));
+				return SliceAndMeasures.from(slice.getSlice(), queryStep, List.of(value));
 			});
 		}
 
@@ -84,11 +85,12 @@ public class UnderlyingQueryStepHelpersNavigable {
 			// Merge all SliceAsMap in a Set
 			Set<IAdhocSlice> notSortedAsSet;
 			if (underlyings.isEmpty()) {
-				notSortedAsSet = Set.of();
+				notSortedAsSet = ImmutableSet.of();
 			} else if (underlyings.size() == 1) {
-				notSortedAsSet = underlyings.iterator().next().slicesSet();
+				notSortedAsSet = Iterables.getOnlyElement(underlyings).slicesSet();
 			} else {
-				notSortedAsSet = underlyings.stream().flatMap(ISliceToValue::slices).collect(Collectors.toSet());
+				notSortedAsSet =
+						underlyings.stream().flatMap(ISliceToValue::slices).collect(ImmutableSet.toImmutableSet());
 			}
 
 			int size = underlyings.size();
